[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools",
  "wheel",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.extend-select = [
  "B",
  "I",
]
lint.ignore = [
  "B011",
  "B904",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.bandit]
skips = [
  "B101",
]
