[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "filemeta"
version = "0.0.3"
description = "functions to read file meta information"
readme = { file = "readme.md", content-type = "text/markdown" }
keywords = [
  "mp3",
]
license = { file = "LICENSE" }
authors = [
  { name = "Dobatymo" },
]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "bitstruct",
  "fastcrc",
  "genutility[exceptions,file,json]>=0.0.105",
  "importlib-resources",
  "piexif",
  "pymediainfo",
  "requests",
  "typing-extensions>=4",
]

urls.Home = "https://github.com/Dobatymo/filemeta"

[tool.setuptools]
packages = [
  "filemeta",
  "filemeta.data",
]

[tool.setuptools.package-data]
filemeta = [
  "py.typed",
  "data/*.json",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.extend-select = [
  "B",
  "I",
]
lint.ignore = [
  "B011",
  "B904",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true

[tool.bandit]
skips = [
  "B101",
]
