[metadata]
name = filemeta
version = 0.0.1
description = functions to read file meta information
author = Dobatymo
long_description = file: readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Dobatymo/filemeta
classifiers =
	Intended Audience :: Developers
	License :: OSI Approved :: ISC License (ISCL)
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[options]
zip_safe = True
use_2to3 = False
python_requires = >=3.8
include_package_data = True
packages =
	filemeta
install_requires =
	genutility
	piexif
	pymediainfo
	requests

[options.package_data]
filemeta =
	py.typed

[mypy]
ignore_missing_imports = True
