[metadata]
name = filemeta
version = 0.0.2
description = functions to read file meta information
author = Dobatymo
long_description = file: readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Dobatymo/filemeta
license_files = LICENSE
classifiers =
	Intended Audience :: Developers
	License :: OSI Approved :: ISC License (ISCL)
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[options]
zip_safe = True
python_requires = >=3.7
include_package_data = True
packages =
	filemeta
	filemeta.data
install_requires =
	bitstruct
	fastcrc
	genutility[json]>=0.0.102
	importlib-resources
	piexif
	pymediainfo
	requests

[options.package_data]
filemeta =
	py.typed
	data/*.json
